--- a/css/home.css
+++ b/css/home.css
@@ -84,7 +84,6 @@ div {
 /* ================HEADER================== */
 /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 header .container{
-	max-width: 1570px;
 	margin:0px;
   padding: 0;
 }
