--- a/css/product.css
+++ b/css/product.css
@@ -405,7 +405,6 @@ main .more-img{
 /* ================HEADER================== */
 /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 header .container{
-	max-width: 1570px;
 	margin:0px;
   padding: 0;
 }
